--- a/SortApp/templates/SortApp/binary/binaryview.html
+++ b/SortApp/templates/SortApp/binary/binaryview.html
@@ -149,7 +149,7 @@ text-transform:uppercase;
 </style>
 </head>
 <body data-spy="scroll" data-target="#myScrollspy" data-offset="20">
-<header id="header">Welcome to {{ req }}</header>
+<header id="header">Welcome to Binary Search</header>
 
 <div class="container">
   <div class="row page__content-container">
@@ -361,13 +361,13 @@ text-transform:uppercase;
     
           </div>
         </br>
-        <input onclick="myFunction()" id ="asd" class="text" placeholder="arr(0)"><br>
+        <input onclick="myFunction()" id ="asd"  class="text" placeholder="arr(0)"><br>
         <div class="contain" >
     
           <p id="bold"> Enter Element you want to find -</p>
 
     
-    
+          
           <input type="text" name="textfield"  onkeypress="return event.charCode >= 48 && event.charCode <= 57">
           <button type="submit" name="sub" id="sub" class="btn btn-primary btn-lg">
             Submit
