--- a/SortApp/templates/SortApp/search.html
+++ b/SortApp/templates/SortApp/search.html
@@ -1,40 +1,86 @@
+
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>SortApp</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Code_Region</title>
 	<!-- CSS only -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+		  rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<!-- JavaScript Bundle with Popper -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
-
 <body>
-	<form method="GET" action="{% url 'linearview' %}">
-		{% csrf_token %}
-		<h2>Choose Which Algorithm You Wanna Try:</h2>
-		<button type="submit" value="linearview" name="data" class="btn btn-primary btn-lg">
-			Linear Search
-		</button>
-	</form>
-	<br />
 
-	<form method="GET" action="{% url 'binaryview' %}">
-		{% csrf_token %}
-		<button type="submit" value="binaryview" name="data" class="btn btn-primary btn-lg">
-			Binary Search
-		</button>
-	</form>
-	<br />
+<header>
+  <!-- Intro settings -->
+  <style>
+    /* Default height for small devices */
+    #intro-example {
+      height: 400px;
+      background-size : cover;
+    }
+
+    /* Height for devices larger than 992px */
+    @media (min-width: 992px) {
+      #intro-example {
+        height: 600px;
+      }
+    }
+  </style>
+
+  <!-- Navbar -->
+  
+  <!-- Navbar -->
+
+  <!-- Background image -->
+  <div
+    id="intro-example"
+    class="p-5 text-center bg-image"
+    style="background-image: url('{%static "bg.jpeg" %}');"
+  >
+    <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
+      <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="text-white">
+          <h1 class="mb-3">Code Region</h1>
+          <h5 class="mb-4">Best & free guide of responsive web design</h5>
+          <form method="GET" action="{% url 'linearview' %}">
+		  <button
+            class="btn btn-outline-light btn-lg m-2"
+            role="button"
+            rel="nofollow"
+            target="_blank"
+			value="linearview" name="data"
+            > Linear Search </button
+          >
+		  </form>
+		  <form method="GET" action="{% url 'binaryview' %}">
+          <button
+            class="btn btn-outline-light btn-lg m-2"
+            
+            role="button"
+            rel="nofollow"
+            target="_blank"
+			value="binaryview" name="data"
+            >Binary Search</button
+          >
+		  </form>
+		  
+          <br><br><br><br><br><br>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Background image -->
+</header>
+
+
 
 	
-	<br>
 </body>
-
 </html>
