--- a/SortApp/templates/SortApp/binary/binaryview.html
+++ b/SortApp/templates/SortApp/binary/binaryview.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -357,7 +358,10 @@ text-transform:uppercase;
         <form method="POST" action="/{{ req }}/">
           <div class="contain" >
           {% csrf_token %}
-            <p id="bold"> Enter Elements in below array -</p>
+            <p id="bold"> Enter sorted array -</p>
+            {% if  error == True %}
+              <p id="bold"> Your array is not sorted -</p>
+            {% endif %}
     
           </div>
         </br>
